css/styles.css
:root {
    --blue: rgb(8, 13, 56);
    --cyan: #367272;
}

* {
    margin: 0;
    box-sizing: border-box;
    scroll-behavior: smooth;
    overflow: hidden;
}

body {
    background-color: rgb(29, 28, 28);
}

@font-face {
    font-family: 'JetBrains Mono';
    src: url(JetBrainsMono.ttf);
}

/* Header */
nav {
    height: 40  px;
    background-color: var(--blue);
    box-shadow: 0 4px 0 rgba(0, 0, 0, 0.404);
    position: fixed;
    top: 0px;
    left: 0px;
    width: 100vw;
}

#nav-list {
    margin: 0;
    display: flex;
    justify-content: flex-end;
}

.nav-item {
    padding: 1.1rem 0;
    list-style-type: none;
    font-size: 1.4rem;
    height: 100%;
    
    color: white;
}

.nav-link {
    text-decoration: none;
    color: white;
    font-family: sans-serif;
    cursor: pointer;
    padding: 1.1rem;
    font-family: 'Noto Sans Thin';
}

.nav-link:hover {
    background-color: var(--cyan);
    color: white;
}

/* Welcome section */

#welcome-section {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    font-size: 2rem;
    height: 100vh;
    width: 100vw;
    font-family: 'JetBrains Mono';
    background-image: linear-gradient(62deg, var(--blue) 0%, var(--cyan) 100%);
    padding-top: -100px;
}

#welcome-text {
    color: white
}

#welcome-subtext {
    color: black;
}

/* Projects */

#projects {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 3rem;
    background-image: linear-gradient(62deg, black 0%, gray 100%);
    width: 100vw;
}

.section-header {
    font-size: 2.5rem;
    font-family: 'JetBrains Mono';
    color: white;
    text-align: center;
}

#projects-grid {
    display: grid;
    grid-template-columns: 1fr 1fr;
    margin-top: 2rem;
}

.project-tile {
    padding: 1rem;
    background-color: var(--blue);
    margin: 2rem;
    border-radius: 4px;
}

.project-image {
    width: 500px;
    height: 300px;
    background-size: cover;
    background-repeat: no-repeat;
}

#first-image {
    background-image: url(../images/sweet-website.png);
    background-position-x: center;
}

#second-image {
    background-image: url(../images/landing-page.png);
    background-position-x: -2rem;
}

#third-image {
    background-image: url(../images/technical-page.png);
}

#fourth-image {
    background-image: url(../images/placeholder.png);
}

/* Contacting */

#contacting {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 1rem;
    margin: 2rem;
    width: 100vw;
}

#contacting-icons {
    display: flex;
}

.contacting-div {
    padding: 3rem;
    font-size: 2rem;
    font-family: 'Noto Sans';
}

.icon-link {
    text-decoration: none;
    color: white;
}

.icon-link:hover {
    color: #367272;
}

@media only screen and (max-width: 1100px) {
    #welcome-section * {
        text-align: center;
    }

    #projects-grid {
        grid-template-columns: 1fr;
    }

    .project-image {
        width: 80vw;
    }

    #contacting-icons {
        display: grid;
        grid-template-columns: 1fr;
    }
}

